--- a/css/styles.css
+++ b/css/styles.css
@@ -26,15 +26,19 @@
   font-weight: bold;
   color: #2D2D2F;
 }
-.description {
+#description {
   text-align: center;
   margin-top: 30px;
   color: #706856;
 }
-.table-part {
+#table-part {
   background-color: white;
   border-top: 10px solid #2D2D2F;
   border-radius: 3px;
   margin-top: 50px;
   padding: 20px;
+  display: none;
+}
+#locationModal {
+  z-index: 100000;
 }
