--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@
   padding: 20px;
   overflow-y: scroll;
   height: 50vh;
+  position: relative;
 }
 #data-table {
   width: 100%;
@@ -49,6 +50,25 @@
 }
 #locationModal {
   z-index: 100000;
+}
+.footer {
+  width: 100%;
+  height: 5vh;
+  position:absolute;
+  bottom:0px;
+  right:0px;
+  margin-right: 30px;
+  margin-bottom: 20px;
+}
+.back-button {
+  width: 12%;
+  height: 30px;
+  font-weight: bold;
+  color: #0C0F3D;
+  background-color: #D5A899;
+  border: none;
+  border-radius: 3px;
+  float: right;
 }
 
 ::-webkit-scrollbar {
