--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,16 @@
   height: 50vh;
   position: relative;
 }
+#details-part {
+  background-color: white;
+  border-top: 10px solid #0C0F3D;
+  border-radius: 3px;
+  margin-top: 50px;
+  padding: 20px;
+  overflow-y: scroll;
+  height: 60vh;
+  position: relative;
+}
 #data-table {
   width: 100%;
   text-align: center;
@@ -53,7 +63,7 @@
 }
 .footer {
   width: 100%;
-  height: 5vh;
+  height: auto;
   position:absolute;
   bottom:0px;
   right:0px;
@@ -69,6 +79,10 @@
   border: none;
   border-radius: 3px;
   float: right;
+}
+.company-logo {
+  width: 15%;
+  height: auto;
 }
 
 ::-webkit-scrollbar {
