--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,12 @@
   margin-top: 30px;
   color: #542641;
 }
+#loading {
+  width: 50%;
+  height: auto;
+  margin-left: 25%;
+  display: none;
+}
 #table-part {
   background-color: white;
   border-top: 10px solid #0C0F3D;
