--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <h1 class="title"> Welcome to the AirTraffic</h1>
     <h4 id="description">Here you can see all the airplanes that are flying over you location. In the list above you can see fligth details available and sort airplanes by altitude they are flying at.</h4>
     <div id="table-part">
+    	<img src="../images/loading.gif" id="loading" />
       <table id="data-table" class="table table-striped"></table>
     </div>
   </div>
